# TestDLL

./: .gitignore  CMakeLists.txt  main.cpp
dll_src/: CMakeLists.txt  Wrapper.cpp  Wrapper.h
dll_src/src/: Manager.cpp  Operator.cpp  Operator.h
dll_user/: CMakeLists.txt  main.cpp
